--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 <html class="theme-next muse" lang="zh-Hans">
 <head>
-  <meta charset="UTF-8"/>
+<meta name="google-site-verification" content="R2AXVgfEdgWrOkr7a6BRWIKuT585vVbB_K3jCYvZeRk" />	
+<meta charset="UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <meta name="theme-color" content="#222">
